fix(basic-testing): Game state building